@@ -29,7 +29,7 @@ import static io.grpc.MethodDescriptor.generateFullMethodName;
 /**
  */
 @javax.annotation.Generated(
-    value = "by gRPC proto compiler (version 1.36.0)",
+    value = "by gRPC proto compiler (version 1.36.1)",
     comments = "Source: rpc.proto")
 public final class HelloGrpc {
 
