@@ -62,7 +62,8 @@ Even when matching on the main class name or on system properties,
 
 [float]
 ===== Bug fixes
-* Fixed log correlation for log4j2 (#1720)
+* Fixed log correlation for log4j2 - {pull}1720[#1720]
+* Fix apm-log4j1-plugin and apm-log4j2-plugin dependency on slf4j - {pull}1723[#1723]
 
 [[release-notes-1.x]]
 === Java Agent version 1.x
